--- a/index.html
+++ b/index.html
@@ -2,40 +2,24 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Heyyyy</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1, skrink-to-fit=no">
+
+	<title>Hi</title>
 	<style type="text/css">
-		body {
-			background-color: yellow;
-			height: 100vh;
-			width: 100vw;
+		html {
+			background-color: teal;
 		}
 
 		h1 {
 			text-align: center;
 			margin-top: 40vh;
 			font-size: 90px;
-		}
-
-		.word-1 {
-			text-transform: uppercase;
-			color: rgb(74, 144, 226);
+			color: purple;
 			font-family: Helvetica, sans-serif;
-		}
-
-		.word-2 {
-			color: #BC1919;
-			font-family: Avenir, sans-serif;
 		}
 	</style>
 </head>
 <body>
-	<h1>
-		<span class="word-1">hello</span>
-		<span class="word-2">world</span>!
-	</h1>
-	<script type="text/javascript">
-		console.log("This page doesn't actually need JavaScript...but if it did, we could put it here. You can delete the script tags.")
-	</script>
+	<h1>hello world!</h1>
 </body>
 </html>
